<resources>
    <string name="app_name">Yamba</string>
    <string name="title_status">Actualización de Estado</string>
    <string name="button_tweet">Tweet</string>
    <string name="hint_status">Por favor, introduce tu estado en 280 caracteres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Action settings</string>
    <string name="tweet">Tweet</string>
    <string name="purge">Purge</string>
    <string name="preferences_section_1">Preferencias principales</string>
    <string name="summaryAccessToken">AccessToken</string>
    <string name="titleAccessToken">User access token</string>
    <string name="titleAccessTokenSecret">User access token secret</string>
    <string name="summaryAccessTokenSecret">AccessTokenSecret</string>
    <string name="preferences_section_2">Preferencias secundarias</string>
    <string name="title_checkbox_preference">Preferencia checkbox</string>
    <string name="title_switch_preference">Preferencia switch</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="titleServiceStart">Service start</string>
    <string name="titleServiceStop">Service stop</string>
</resources>